sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:5: error: not found: value estPlusPetit
    while(!estPlusPetit(i,i+1)){
           ^