sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var a = getNombreValeurs()
  for ( i<- 0 to a-2){
    while(!estPlusPetit(i,i+1)){
      echange(i,i+1)
    }
  }
}